[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["pontaryagin <ponta1496@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.7.1"
setuptools = "^58.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.7.0",
]
build-backend = "setuptools.build_meta"
